--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Quick but dirty setup a RESTful API project with Laravel, be evil! ;-)",
     "type": "library",
     "require": {
-        "laravel/laravel": "^5.4",
+        "laravel/framework" : "5.4.*",
         "laravel/passport": "^3.0",
         "dingo/api": "1.0.*@dev",
         "hashids/hashids": "^2.0"
@@ -13,7 +13,6 @@
         "phpunit/phpunit": "~5.0"
     },
     "license": "MIT",
-    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Khsing\\Restapi\\": "src/"
